# child-manager

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  README.md  alembic.ini  compose.dev.yaml  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: implementation.yml
.github/workflows/: quality.yml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
apps/: __init__.py
apps/api/: __init__.py  __main__.py  app.py  dependencies.py  main.py  middleware.py  openapi.py  openapi_responses.py
apps/web/: __init__.py  __main__.py  api_client.py  app.py  main.py  observability.py
apps/worker/: __init__.py  __main__.py  actors.py  broker.py  main.py  scheduler.py
docs/: ROADMAP.md
docs/ADR/: 0001-cloud-only.md  ADR-0001-cloud-only-single-kindergarten-boundary.md  ADR-0001-cloud-only.md  ADR-0002-separate-web-api-worker-modular-monolith.md  ADR-0003-postgresql-authoritative-dramatiq-redis-jobs.md  ADR-0004-same-origin-cookie-authentication.md  ADR-0005-provider-neutral-ai-and-central-prompts.md  ADR-0006-fixed-word-template-export-boundary.md  ADR-0007-caddy-compose-and-file-secrets.md  ADR-0008-degradable-calendar-and-external-services.md  ADR-0009-defer-production-deployment-until-feature-complete.md  ADR-0010-restricted-public-entry-passkey-authentication-and-recovery.md  ADR-0011-password-totp-backup-login.md  README.md
docs/PRD/: lesson-management.md
docs/design/: data-model.md  database-schema.md  system-architecture.md
docs/development/: dual-agent-development.md  local-development-environments.md  m1-issue-drafts.md  m2-issue-drafts.md  single-implementation-development.md  workflow-reset-20260721.md
docs/faq/: codex-faq.md  combined-audit.md
docs/security/: threat-model.md
docs/审查报告/: 20260713编码前审查报告.md  20260713编码前审查报告修复方案.md  20260714审查报告.md  20260714解决方案.md  20260719-issue6-修复报告.md  codex-trae联合审查报告20260713.md  fix20260713codex方案.md  fix20260713trae方案.md  fix20260713方案.md  fix20260713计划.md
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_labels.json.sig  .graphify_learning.json  .graphify_python  .graphify_root  .vocab.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/2026-07-14/: cost.json
graphify-out/2026-07-15/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
graphify-out/memory/: query_20260711_021923_接下来需要生成什么文件呢.md  (+7 more)
scripts/: validate_openapi.py
tests/: __init__.py  conftest.py  database_config.py  test_config.py  test_error_response.py  test_health_endpoints.py
tests/web/: main.py  (+11 more)
(+120 files in other folders)
