[project]
name = "child-manager"
version = "0.1.0"
description = "幼儿园一日活动计划管理系统"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16,<2",
    "argon2-cffi>=25.1,<26",
    "chinesecalendar>=1.11,<2",
    "cryptography>=45,<46",
    "dramatiq[redis]>=2,<3",
    "fastapi>=0.139,<1",
    "httpx>=0.28,<1",
    "nicegui>=3,<4",
    "psycopg[binary]>=3.3,<4",
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.10,<3",
    "pyjwt>=2.10,<3",
    "python-docx>=1.2,<2",
    "sqlalchemy>=2.0,<3",
    "structlog>=25,<26",
    "uvicorn>=0.35,<1",
]

[dependency-groups]
dev = [
    "httpx2>=2,<3",
    "openapi-spec-validator>=0.7,<1",
    "pyright>=1.1,<2",
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.1,<2",
    "respx>=0.22,<1",
    "ruff>=0.12,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
filterwarnings = [
    "error::starlette.exceptions.StarletteDeprecationWarning",
]

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = ["graphify-out"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
include = ["apps", "packages", "tests"]
exclude = ["graphify-out"]
